fix contrast errors

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -103,9 +103,9 @@ h1:hover {
   position: absolute;
   left: 20px;
   bottom: 0;
-  font-size: 100px;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-size: 90px;
+  color: #1E90FF;
+  text-shadow: -2px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
 .overview, .book, .user-dashboard {
